--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
+        "symfony/var-dumper": "^5.0",
         "altorouter/altorouter": "^2.0",
-        "benoclock/alto-dispatcher": "^1.1"
+        "benoclock/alto-dispatcher": "^1.2"
     },
 
     "autoload": {
